Fix Info.plist and project paths for watchOS

--- a/WatchNet Watch App/Info.plist
+++ b/WatchNet Watch App/Info.plist
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
 <dict>
     <key>CFBundleIdentifier</key>
     <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
@@ -21,3 +24,4 @@
     <key>NSLocalNetworkUsageDescription</key>
     <string>This app requires access to devices on your local network.</string>
 </dict>
+</plist>
