--- a/WatchNet Watch App/Info.plist
+++ b/WatchNet Watch App/Info.plist
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
 <dict>
     <key>CFBundleIdentifier</key>
     <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
@@ -11,6 +14,12 @@
     <string>1.0</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
+    <key>WKWatchKitApp</key>
+    <true/>
+    <key>WKAppBundleIdentifier</key>
+    <string>MIA2.WatchNet.watchkitapp</string>
+    <key>WKCompanionAppBundleIdentifier</key>
+    <string>MIA2.WatchNet</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>NSBonjourServices</key>
@@ -21,3 +30,4 @@
     <key>NSLocalNetworkUsageDescription</key>
     <string>This app requires access to devices on your local network.</string>
 </dict>
+</plist>
